--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "homepage": "https://github.com/PraveenAsokan/Cypress-tests#readme",
   "devDependencies": {
-    "browserstack-cypress-cli": "^1.11.2",
-    "cypress": "^9.3.1",
-    "cypress-cucumber-preprocessor": "^4.3.1"
+    "browserstack-cypress-cli": "^1.19.0",
+    "cypress": "^10.11.0",
+    "@badeball/cypress-cucumber-preprocessor": "^13.0.3",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.1.5"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true
